samples/_failures_safe/1761785869_1d936e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e08c259.c: In function ‘tokenize’:
./samples/SAFE/__tmp_2e08c259.c:169:13: error: expected declaration or statement at end of input
  169 |             token.type = TOKEN_INVALID;
      |             ^~~~~
./samples/SAFE/__tmp_2e08c259.c:169:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2e08c259.c:169:13: error: expected declaration or statement at end of input
